Fix/otherScrollBarUI

--- a/src/app/body/common-tools/suggestion-bucket/suggestion-bucket.component.css
+++ b/src/app/body/common-tools/suggestion-bucket/suggestion-bucket.component.css
@@ -23,6 +23,7 @@
 
 #displayname {
     font-size: 11px;
+    overflow-x:hidden ;
 }
 
 #email {
@@ -94,5 +95,15 @@ h4:hover{
 }
 .aboutMe{
     max-height: 60px;
-    overflow: scroll;
+    overflow-y: auto;
+    overflow-x:hidden ;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--scrollbar-color); 
+    border-radius: 10px;
 }
