--- a/src/app/body/task-details/task-details.component.css
+++ b/src/app/body/task-details/task-details.component.css
@@ -89,6 +89,8 @@ nav {
     border-color: var(--dropdown-hover);
     border-style: solid;
     border-width: medium;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .btn {
